--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,13 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+
       - run: node generator.js
+
       - run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git status
           git add map.json
-          git commit -m "auto update" || echo "no changes"
+          git commit -m "auto update" || echo "nothing to commit"
           git push
